--- a/app.json
+++ b/app.json
@@ -14,7 +14,7 @@
     },
     "SESSION_ID": {
       "description": "your session id",
-      "required": true,
+      "required": false,
       "value": ""
     },
      "REMOVEBG_KEY": {
